; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_led_schedule_change.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_led_schedule_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar8327_led = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ar8327_led*, i64)* @ar8327_led_schedule_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar8327_led_schedule_change(%struct.ar8327_led* %0, i64 %1) #0 {
  %3 = alloca %struct.ar8327_led*, align 8
  %4 = alloca i64, align 8
  store %struct.ar8327_led* %0, %struct.ar8327_led** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ar8327_led*, %struct.ar8327_led** %3, align 8
  %6 = getelementptr inbounds %struct.ar8327_led, %struct.ar8327_led* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %18

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.ar8327_led*, %struct.ar8327_led** %3, align 8
  %14 = getelementptr inbounds %struct.ar8327_led, %struct.ar8327_led* %13, i32 0, i32 0
  store i64 %12, i64* %14, align 8
  %15 = load %struct.ar8327_led*, %struct.ar8327_led** %3, align 8
  %16 = getelementptr inbounds %struct.ar8327_led, %struct.ar8327_led* %15, i32 0, i32 1
  %17 = call i32 @schedule_work(i32* %16)
  br label %18

18:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
